# unibranch

./: Cargo.toml  File2  LICENSE  README.md  verify-fmt.sh
.github/workflows/: rust.yml
repo_generator/: Cargo.toml
repo_generator/src/: lib.rs  local_commit_changed.rs  main.rs  rebase_with_conflict.rs  rebased_local_commit_changed.rs  rebased_local_commit_unchanged.rs  remote_branch_changed_local_unchanged.rs
src/: TODO.md  lib.rs  main.rs
src/commands/: cherry_pick.rs  create.rs  diff.rs  mod.rs  pull.rs  push.rs  update.rs
src/git/: local_commit.rs  mod.rs
test_repo/: Cargo.toml
test_repo/src/: lib.rs
tests/: create_command.rs  diff_command.rs  git_repo.rs  pull_command.rs  tracked_commit.rs  update_command.rs
tests/common/: mod.rs
unibranch/: Cargo.toml
unibranch/src/: TODO.md  main.rs
unibranch/src/commands/: create.rs  mod.rs  pull.rs  push.rs  sync.rs
unibranch/src/git/: local_commit.rs  mod.rs  oid.rs
unibranch/src/git/local_commit/: mod.rs  tracked_commit.rs  untracked_commit.rs
unibranch/src/git/local_commit/tests/: mod.rs  tracked_commit.rs  tracked_commit_merge_remote_head.rs  tracked_commit_sync_with_main.rs  tracked_commit_update_local_branch_head.rs  untracked_commit_rebase.rs
unibranch/src/git/remote_command/: mod.rs
unibranch/tests/: create_command.rs  git_repo.rs  pull_command.rs  sync_command_merge_conflicts.rs  tracked_commit.rs  update_command.rs
