[package]
name = "ubr"
version = "0.1.0"
edition = "2021"
description = "Unibranch is a wrapper around git to enable a single branch workflow with stacked commits."
license = "MIT"
repository = "https://github.com/mbergenlid/unibranch"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.18.3"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indoc = "2.0.5"
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1.0.125"

[dev-dependencies]
test_repo = { path = "../test_repo" }
repo_generator = { path = "../repo_generator" }
tempfile = "3.10.1"
pretty_assertions = "1.4.0"
